fix author line spacing issue

--- a/src/components/PostHero/PostHero.scss
+++ b/src/components/PostHero/PostHero.scss
@@ -180,7 +180,7 @@
         margin: 0;
         font-family: $font-sans-serif;
         font-weight: $sans-serif-regular;
-        line-height: 12px;
+        line-height: 15px;
       }
     }
   }
